glx/testdata/valid/repository-minimal.glx
repositories:
  repository-12345678:
    name: "Test Repository"
