glx/testdata/invalid/repository-missing-name.glx
# Invalid: Missing required 'name' field
repositories:
  repository-12345678:
    type: library
